# SuperBenchmark

./: .env.example  .pre-commit-config.yaml  .style.yapf  pyproject.toml
.styleconfigs/: .isort.cfg  mypy.ini  pyproject.toml
src/app/: config.py  main.py
src/app/api/: routes.py
src/app/repositories/: benchmark.py
src/app/schemas/: benchmark.py
src/app/services/: benchmark.py
src/app/tests/fixtures/: load_fixtures.py  test_database.json
